--- a/work.html
+++ b/work.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/responsive-tabs.css">
+    <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" href="images/favicon.png">
 </head>
@@ -59,7 +60,7 @@
                                 <li>ご職業　：　開業医</li>
                                 <li>ご年齢　：　50代</li>
                             </ul>
-                            <div class="para">
+                            <div class="para cpc-1024">
                                 <h4>ご購入・ご売却の経緯</h4>
                                 <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
                                     トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
@@ -67,6 +68,13 @@
                                     。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
                             </div>
                         </div>
+                    </div>
+                    <div class="para csp-1024">
+                        <h4>ご購入・ご売却の経緯</h4>
+                        <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
+                            トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
+                            ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
+                        。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
                     </div>
                 </div>
                 <div class="achievment-layer">
@@ -86,7 +94,7 @@
                                 <li>ご職業　：　開業医</li>
                                 <li>ご年齢　：　50代</li>
                             </ul>
-                            <div class="para">
+                            <div class="para cpc-1024">
                                 <h4>ご購入・ご売却の経緯</h4>
                                 <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
                                     トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
@@ -94,6 +102,13 @@
                                     。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
                             </div>
                         </div>
+                    </div>
+                    <div class="para csp-1024">
+                        <h4>ご購入・ご売却の経緯</h4>
+                        <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
+                            トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
+                            ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
+                        。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
                     </div>
                 </div>
                 <div class="achievment-layer">
@@ -113,7 +128,7 @@
                                 <li>ご職業　：　開業医</li>
                                 <li>ご年齢　：　50代</li>
                             </ul>
-                            <div class="para">
+                            <div class="para cpc-1024">
                                 <h4>ご購入・ご売却の経緯</h4>
                                 <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
                                     トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
@@ -121,6 +136,13 @@
                                     。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
                             </div>
                         </div>
+                    </div>
+                    <div class="para csp-1024">
+                        <h4>ご購入・ご売却の経緯</h4>
+                        <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
+                            トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
+                            ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
+                        。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
                     </div>
                 </div>
                 <div class="achievment-layer">
@@ -140,7 +162,7 @@
                                 <li>ご職業　：　開業医</li>
                                 <li>ご年齢　：　50代</li>
                             </ul>
-                            <div class="para">
+                            <div class="para cpc-1024">
                                 <h4>ご購入・ご売却の経緯</h4>
                                 <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
                                     トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
@@ -148,6 +170,13 @@
                                     。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
                             </div>
                         </div>
+                    </div>
+                    <div class="para csp-1024">
+                        <h4>ご購入・ご売却の経緯</h4>
+                        <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
+                            トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
+                            ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
+                        。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
                     </div>
                 </div>
                 <div class="achievment-layer">
@@ -167,7 +196,7 @@
                                 <li>ご職業　：　開業医</li>
                                 <li>ご年齢　：　50代</li>
                             </ul>
-                            <div class="para">
+                            <div class="para cpc-1024">
                                 <h4>ご購入・ご売却の経緯</h4>
                                 <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
                                     トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
@@ -175,6 +204,13 @@
                                     。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
                             </div>
                         </div>
+                    </div>
+                    <div class="para csp-1024">
+                        <h4>ご購入・ご売却の経緯</h4>
+                        <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
+                            トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
+                            ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
+                        。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
                     </div>
                 </div>
                 <div class="achievment-pagination">
@@ -276,7 +312,7 @@
     <script src="js/fonts-awesome-5.js"></script>
     <script src="js/intersection-observer-polyfill.js"></script>
     <script src="js/responsiveTabs.min.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
     <script src="js/custom.js"></script>
 </body>
-
 </html>
