--- a/howto.html
+++ b/howto.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/responsive-tabs.css">
+    <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" href="images/favicon.png">
 </head>
@@ -391,6 +392,7 @@
     <script src="js/fonts-awesome-5.js"></script>
     <script src="js/intersection-observer-polyfill.js"></script>
     <script src="js/responsiveTabs.min.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
     <script src="js/custom.js"></script>
 </body>
 </html>
