--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				</nav>
 			</div>
 		</header>
-		<section class="banner_section">
+		<section class="banner_section before_load">
 			<div class="custom_container">
 				<div class="banner_content">
 					<h1>RELIABLE ESTATE AGENT</h1>
