banner design changes

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			</div>
 		</header>
 		<section class="banner_section before_load">
+			<img src="images/banner_image.png" alt="banner image">
 			<div class="custom_container">
 				<div class="banner_content">
 					<h1>RELIABLE ESTATE AGENT</h1>
