--- a/faq.html
+++ b/faq.html
@@ -23,9 +23,11 @@
                 </a>
                 <nav class="custom_navbar">
                     <ul>
-                        <li><a href="#">事業案内</a></li>
-                        <li><a href="#">売買実績</a></li>
                         <li><a href="#">会社案内</a></li>
+                        <li><a href="#">ご購入・ご売却について</a></li>
+                        <li><a href="#">賃貸管理</a></li>
+                        <li><a href="#">実績一覧</a></li>
+                        <li><a href="#">採用情報</a></li>
                         <li><a href="#">お問い合わせ</a></li>
                     </ul>
                 </nav>
