--- a/company.html
+++ b/company.html
@@ -12,7 +12,7 @@
 <body>
     <div class="loader-wrapper"><div class="loader"></div></div>
     <main class="main">
-        <header class="site_header">
+        <header class="site_header inner_page_header">
             <div class="custom_container">
                 <a class="header_logo" href="index.html">
                     <img src="images/logo.png" alt="logo image">
