--- a/company.html
+++ b/company.html
@@ -33,17 +33,17 @@
                 </nav>
             </div>
         </header>
-        <section class="regular-banner">
+        <section class="regular-banner banner_animation">
             <div class="regular-banner-wrapper">
                 <img src="images/company-page-banner.jpg" class="regular-banner-img" />
             </div>
         </section>
-        <div class="regular-head margin-top-minus">
+        <div class="regular-head margin-top-minus io fade upS banner_after_section">
             <div class="regular-head-wrapper">
                 <h2>会社案内</h2>
             </div>
         </div>
-        <section class="company-page-section">
+        <section class="company-page-section io fade upS">
             <div class="custom_container">
                 <div class="company-page-layer pride-content">
                     <div class="blue_title_bg">
@@ -52,43 +52,94 @@
                                 <h3>経営理念</h3>
                             </div>
                             <div class="other-content">
-                                <h4>情熱が<span>創</span>るソリューション</h4>
-
-                                <div class="underline_heading">
-                                    <h2>
-                                        <span>不動産投資に新しい価値を生み出</span><span>し、お客様に最適なソリュ</span><span>ーションと圧倒的信頼感</span><span>を提供します。</span>
-                                    </h2>
+                                <h4 class="io fade upS">情熱が<span>創</span>るソリューション</h4>
+                                <div class="number_head io fade upS">
+                                    <div class="number_part"><span class="underline_span">一、</span></div>
+                                    <div class="number_text">
+                                        <span class="underline_span">
+                                            不動産投資に新しい価値を生み出し、お客様に最適なソリューションと圧倒的信頼感を提供します。
+                                        </span>
+                                    </div>
                                 </div>
-                                <p>景気や市況に左右されやすい不動産価値とその運用方法。所有している不動産を今後どのように運用
+                                <p class="io fade upS">景気や市況に左右されやすい不動産価値とその運用方法。所有している不動産を今後どのように運用
                                     していったらいいのか、どれくらいの価格で売却できるのか、どのような方法で売却をするのか、
                                     不動産をお持ちの方なら誰もが一度は考え悩む事です。当社では、そんなお客様に寄り添い豊富な経
                                     験と情報をもとに的確なご提案を行い、同時に圧倒的信頼関係を築けるよう努めてまいります。当社
                                     スタッフとの出会いから始まる付加価値を、今までにない圧倒的信頼感をご体感ください。</p>
-
-                                <div class="underline_heading">
-                                    <h2><span>お客様に満足されることは当然</span><span>と考え、想像を超えるサービス、</span><span>感動を提供します。</span></h2>
+                                <div class="number_head io fade upS">
+                                    <div class="number_part"><span class="underline_span">一、</span></div>
+                                    <div class="number_text">
+                                        <span class="underline_span">
+                                            お客様に満足されることは当然と考え、想像を超えるサービス、感動を提供します。
+                                        </span>
+                                    </div>
                                 </div>
-                                <p>当社でお客様が経験されるもの、それは不安が解消された心地よさ、満ち足りた幸福感そしてお客様
+                                <p class="io fade upS">当社でお客様が経験されるもの、それは不安が解消された心地よさ、満ち足りた幸福感そしてお客様
                                     が言葉にされない願望やニーズをも先読みしてお応えするサービスの心です。その為に現状に満足せ
                                     ず、常に「感性」を磨き向上意識を持って仕事をします。</p>
 
-                                <div class="underline_heading">
-                                    <h2><span>全従業員が日々研鑽に励み、</span><span>プロフェッショナルとして自信と</span><span>誇りを持って行動をします。</span></h2>
+                                <div class="number_head io fade upS">
+                                    <div class="number_part"><span class="underline_span">一、</span></div>
+                                    <div class="number_text">
+                                        <span class="underline_span">
+                                            全従業員が日々研鑽に励み、プロフェッショナルとして自信と誇りを持って行動をします。
+                                        </span>
+                                    </div>
                                 </div>
-                                <p>「人財」こそが当社の最大の財産だと考えています。資格取得、社内研修会やOJT研修をはじめ、不
+                                <p class="io fade upS">「人財」こそが当社の最大の財産だと考えています。資格取得、社内研修会やOJT研修をはじめ、不
                                     動産の専門知識のみだけでなく「感性を磨き教養を深める」機会づくりに積極的に取り組んでおりま
                                     す。こうした人財育成に取り組むと共に、一人ひとりが自身の成長を考え、自己研鑽に努める企業風
                                     土の醸成を図っています。従業員満足度を高め、その結果、顧客満足度向上を目指します。</p>
 
-                                <div class="underline_heading">
-                                    <h2><span>我々全員が高潔かつ誠実で真摯な</span><span>行動を実践し公明正大に企業活動</span><span>を行い、社会から信頼される企</span><span>業を目指します。</span></h2>
+                                <div class="number_head io fade upS">
+                                    <div class="number_part"><span class="underline_span">一、</span></div>
+                                    <div class="number_text">
+                                        <span class="underline_span">
+                                            我々全員が高潔かつ誠実で真摯な行動を実践し公明正大に企業活動を行い、社会から信頼される企業を目指します。
+                                        </span>
+                                    </div>
                                 </div>
-                                <p>「人財」こそが当社の最大の財産だと考えています。資格取得、社内研修会やOJT研修をはじめ、不
+                                <p class="io fade upS">「人財」こそが当社の最大の財産だと考えています。資格取得、社内研修会やOJT研修をはじめ、不
                                     動産の専門知識のみだけでなく「感性を磨き教養を深める」機会づくりに積極的に取り組んでおりま
                                     す。こうした人財育成に取り組むと共に、一人ひとりが自身の成長を考え、自己研鑽に努める企業風
                                     土の醸成を図っています。従業員満足度を高め、その結果、顧客満足度向上を目指します。</p>
 
-                                <div class="organization-detail">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="company-page-layer io fade upS">
+                    <div class="blue_title_bg">
+                        <div class="yellow_inner_border">
+                            <div class="heading_with_bg">
+                                <h3>代表挨拶</h3>
+                            </div>
+                            <div class="other-content">
+
+                                <div class="underline_heading io fade upS">
+                                    <h2><span>“ 本来の姿にこだわる</span><span>企業と誇りを胸に “</span></h2>
+                                </div>
+                                <p class="io fade upS">私は、不動産業界で仲介を長く行う中、たくさんのオーナー様と出会い、光栄にも「ひとりひとりの人生」
+                                    というドラマを身近に感じ、寄り添わせていただいております。<br />
+                                    マンション投資にもドラマがあります。そこには歴史があり喜怒哀楽があり、出会ったオーナー様との
+                                    会話やドラマを鮮明に覚えています。</p>
+
+                                <p class="io fade upS">マンションオーナー様との対話を通じて、ある日気付きました。『真面目な人が成功するのではない。』
+                                    プロの不動産業者と素人では、様々な面で圧倒的な「違い」や「不利な立場」があり、巧みに騙されている
+                                    ことも多く見受けられます。不動産業界ではあまりにも理不尽なことが多いことに葛藤してまいりました。</p>
+
+                                <p class="io fade upS">今まで出会ったオーナー様の「あなたに任せて良かった」「やっと肩の荷がおりてスッキリした」という
+                                    『一言と笑顔』があるから頑張れる。<br />
+                                    綺麗事になりますが『利益より大切なことがある』そう確信しております。</p>
+
+                                <p class="io fade upS">利益追求は企業としては当たり前の使命ですが、綺麗事だけで事業活動に専念することそれを実践するのが
+                                    難しいことは重々理解しています。<br />
+                                    激しい競争の中、目先の利益を優先し、それ以外をおざなりにする不動産業者が数多く存在している事実に
+                                    同じ葛藤を抱いている者達、情熱、志を持ったメンバーで満を持してゴードンエステイトを設立しました。
+                                    まだ歴史と呼べるものもない会社ではありますが、『私たちにしかできない事がある』と強い信念を持ち、
+                                    決して妥協をせず、これからも、さらに多くの皆様と共にドラマを築けるよう精進してまいります。</p>
+                                <div class="organization-detail io fade upS">
                                     <p>株式会社ゴードンエステイト<br/>
                                         代表取締役 <img src="images/author-name.png"/></p>
                                 </div>
@@ -97,42 +148,7 @@
                     </div>
                 </div>
 
-                <div class="company-page-layer">
-                    <div class="blue_title_bg">
-                        <div class="yellow_inner_border">
-                            <div class="heading_with_bg">
-                                <h3>代表挨拶</h3>
-                            </div>
-                            <div class="other-content">
-
-                                <div class="underline_heading">
-                                    <h2><span>“ 本来の姿にこだわる</span><span>企業と誇りを胸に “</span></h2>
-                                </div>
-                                <p>私は、不動産業界で仲介を長く行う中、たくさんのオーナー様と出会い、光栄にも「ひとりひとりの人生」
-                                    というドラマを身近に感じ、寄り添わせていただいております。<br />
-                                    マンション投資にもドラマがあります。そこには歴史があり喜怒哀楽があり、出会ったオーナー様との
-                                    会話やドラマを鮮明に覚えています。</p>
-
-                                <p>マンションオーナー様との対話を通じて、ある日気付きました。『真面目な人が成功するのではない。』
-                                    プロの不動産業者と素人では、様々な面で圧倒的な「違い」や「不利な立場」があり、巧みに騙されている
-                                    ことも多く見受けられます。不動産業界ではあまりにも理不尽なことが多いことに葛藤してまいりました。</p>
-
-                                <p>今まで出会ったオーナー様の「あなたに任せて良かった」「やっと肩の荷がおりてスッキリした」という
-                                    『一言と笑顔』があるから頑張れる。<br />
-                                    綺麗事になりますが『利益より大切なことがある』そう確信しております。</p>
-
-                                <p>利益追求は企業としては当たり前の使命ですが、綺麗事だけで事業活動に専念することそれを実践するのが
-                                    難しいことは重々理解しています。<br />
-                                    激しい競争の中、目先の利益を優先し、それ以外をおざなりにする不動産業者が数多く存在している事実に
-                                    同じ葛藤を抱いている者達、情熱、志を持ったメンバーで満を持してゴードンエステイトを設立しました。
-                                    まだ歴史と呼べるものもない会社ではありますが、『私たちにしかできない事がある』と強い信念を持ち、
-                                    決して妥協をせず、これからも、さらに多くの皆様と共にドラマを築けるよう精進してまいります。</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="company-page-layer">
+                <div class="company-page-layer io fade upS">
                     <div class="blue_title_bg">
                         <div class="yellow_inner_border">
                             <div class="heading_with_bg">
