--- a/contact.html
+++ b/contact.html
@@ -33,13 +33,13 @@
                 </nav>
             </div>
         </header>
-        <section class="regular-banner">
+        <section class="regular-banner banner_animation">
             <div class="regular-banner-wrapper">
                 <img src="images/contact_banner.jpg" class="regular-banner-img" />
             </div>
         </section>
-        <div class="regular-head margin-top-minus">
-            <div class="regular-head-wrapper">
+        <div class="regular-head margin-top-minus banner_after_section">
+            <div class="regular-head-wrapper io fade upS">
                 <h2>お問い合わせ</h2>
             </div>
         </div>
