--- a/sales.html
+++ b/sales.html
@@ -34,22 +34,22 @@
                 </nav>
             </div>
         </header>
-        <section class="regular-banner">
+        <section class="regular-banner banner_animation">
             <div class="regular-banner-wrapper">
                 <img src="images/sales-page-banner.jpg" class="regular-banner-img" />
             </div>
         </section>
-        <div class="regular-head margin-top-minus">
-            <div class="regular-head-wrapper">
+        <div class="regular-head margin-top-minus banner_after_section">
+            <div class="regular-head-wrapper io fade upS">
                 <h2>賃貸管理</h2>
             </div>
         </div>
         <section class="sales-management-section">
             <div class="custom_container">
-                <div class="underline_heading">
+                <div class="underline_heading io fade upS">
                     <h2><span>お客様の大切な物件管理は当社</span> <br class="csp-675"/> <span>にお任せください。</span></h2>
                 </div>
-                <div class="sales-management-para">
+                <div class="sales-management-para io fade upS">
                     <p>賃貸管理、滞納、入居手続きから退去手続きまで、マンション経営に関わる
                         すべての業務を当社が代行致します。</p>
                     <p>そして資産価値の維持だけでなく、高めていくことが賃貸経営を成功させるには
@@ -57,7 +57,7 @@
                 </div>
             </div>
         </section>
-        <section class="sales-fee-section">
+        <section class="sales-fee-section io fade upS">
             <div class="sales-fee-wrapper">
                 <div class="custom_container">
                     <h3>賃貸管理料 ： 月額 2,000円（税別）</h3>
@@ -70,7 +70,7 @@
             <div class="custom_container">
                 <div class="custom_row">
                     <div class="custom_col_6">
-                        <div class="sales-rent-layer">
+                        <div class="sales-rent-layer io fade upS">
                             <h4>１.家賃管理</h4>
                             <p>賃料収入を当社が集金して管理させて
                                 いただき、毎月末日までにオーナー様へ
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                     <div class="custom_col_6">
-                        <div class="sales-rent-layer">
+                        <div class="sales-rent-layer io fade upS">
                             <h4>２. 家賃滞納者への対応</h4>
                             <p>家賃滞納が発生した場合、賃料を当社が保証
                                 します。また滞納催促賃料の回収にかかる
@@ -87,7 +87,7 @@
                         </div>
                     </div>
                     <div class="custom_col_6">
-                        <div class="sales-rent-layer">
+                        <div class="sales-rent-layer io fade upS">
                             <h4>３. クレーム対応</h4>
                             <p>入居者様からのクレームなど、各種問い合わせ
                                 の対応を致します。<br/>
@@ -96,7 +96,7 @@
                         </div>
                     </div>
                     <div class="custom_col_6">
-                        <div class="sales-rent-layer">
+                        <div class="sales-rent-layer io fade upS">
                             <h4>４. 入居・退去時の対応</h4>
                             <p>退去受付から退去時の立ち合いや敷金精算、
                                 業者手配に至るまで一貫したサポートを行い
@@ -108,12 +108,12 @@
             </div>
         </section>
         <section class="sales-service-section">
-            <div class="sales-service-head">
+            <div class="sales-service-head io fade upS">
                 <div class="custom_container">
                     <h2>サービス内容</h2>
                 </div>
             </div>
-            <div class="sales-service-layer">
+            <div class="sales-service-layer io fade upS">
                 <div class="custom_row">
                     <div class="custom_col_6">
                         <div class="sales-service-img">
@@ -131,7 +131,7 @@
                     </div>
                 </div>
             </div>
-            <div class="sales-service-layer">
+            <div class="sales-service-layer io fade upS">
                 <div class="custom_row custom_row_reverse">
                     <div class="custom_col_6">
                         <div class="sales-service-img">
@@ -150,7 +150,7 @@
                     </div>
                 </div>
             </div>
-            <div class="sales-service-layer">
+            <div class="sales-service-layer io fade upS">
                 <div class="custom_row">
                     <div class="custom_col_6">
                         <div class="sales-service-img">
@@ -167,7 +167,7 @@
                     </div>
                 </div>
             </div>
-            <div class="sales-service-layer">
+            <div class="sales-service-layer io fade upS">
                 <div class="custom_row custom_row_reverse">
                     <div class="custom_col_6">
                         <div class="sales-service-img">
@@ -189,14 +189,14 @@
         <section class="sales-remodeling-section">
             <div class="custom_container">
                 <div class="head">
-                    <div class="underline_heading">
+                    <div class="underline_heading io fade upS">
                         <h2><span>室内リフォーム画像をお持ちのデ</span><span>バイスで確認して頂けます。</span></h2>
                         <p>室内リフォームのビフォーアフターをお手持ちのパソコンやタブレット、スマートフォンから
                             ３６０度カメラ撮影の画像でご確認していただくことができます。<br/>
                             現地に行くことなく、自宅やオフィスから現場の状況を把握していただくことが出来ます！</p>
                     </div>
                     <div class="big-img">
-                        <img src="images/remodeling-img.jpg"/>
+                        <iframe src="https://r61535432.theta360.biz/t/09e14c94-9f74-11ec-98af-0a45e0bc344d-1" title="description" width="100%" height="600px"></iframe>
                     </div>
                 </div>
             </div>
@@ -204,13 +204,13 @@
         <section class="howto-contact-section">
             <div class="custom_container">
                 <div class="howto-contact-sub">
-                    <div class="underline_heading">
+                    <div class="underline_heading io fade upS">
                         <h2><span>ご相談や詳しい内容につきましてはこ</span> <br class="csp" /> <span>ちらからお問い合わせください！</span></h2>
                     </div>
                     <div class="howto-contact-content">
                         <div class="custom_row">
                             <div class="custom_col_6 columnn">
-                                <div class="content-bx">
+                                <div class="content-bx io fade upS">
                                     <div class="head">
                                         <div class="icon">
                                             <img src="images/icon-call-blue.png" />
@@ -225,7 +225,7 @@
                                 </div>
                             </div>
                             <div class="custom_col_6 columnn">
-                                <div class="content-bx">
+                                <div class="content-bx io fade upS">
                                     <div class="head">
                                         <div class="icon">
                                             <img src="images/icon-mail-blue.png" />
