--- a/faq.html
+++ b/faq.html
@@ -33,17 +33,17 @@
                 </nav>
             </div>
         </header>
-        <section class="regular-banner">
+        <section class="regular-banner banner_animation">
             <div class="regular-banner-wrapper">
                 <img src="images/faq_banner.jpg" class="regular-banner-img" />
             </div>
         </section>
-        <section class="faq_section">
+        <section class="faq_section io fade upS banner_after_section">
             <div class="custom_container">
                 <div class="blue_title_bg">
                     <div class="yellow_inner_border">
                         <div class="heading_with_bg">
-                            <h3>ご売却時によくあるご質問</h3>
+                            <h3>ご購入時によくある質問</h3>
                         </div>
                         <div class="faq_content">
                             <h4>現在賃貸中で入居者がいますが、売却できますか？</h4>
@@ -82,7 +82,7 @@
         <section class="howto-contact-section">
             <div class="custom_container">
                 <div class="howto-contact-sub">
-                    <div class="underline_heading">
+                    <div class="underline_heading io fade upS">
                         <div class="custom_container">
                             <h2><span>ご相談や詳しい内容につきましてはこ</span> <br class="csp"/> <span>ちらからお問い合わせください！</span></h2>
                         </div>
@@ -90,7 +90,7 @@
                     <div class="howto-contact-content">
                         <div class="custom_row">
                             <div class="custom_col_6 columnn">
-                                <div class="content-bx">
+                                <div class="content-bx io fade upS">
                                     <div class="head">
                                         <div class="icon">
                                             <img src="images/icon-call-blue.png" />
@@ -105,7 +105,7 @@
                                 </div>
                             </div>
                             <div class="custom_col_6 columnn">
-                                <div class="content-bx">
+                                <div class="content-bx io fade upS">
                                     <div class="head">
                                         <div class="icon">
                                             <img src="images/icon-mail-blue.png" />
