--- a/howto.html
+++ b/howto.html
@@ -33,12 +33,12 @@
                 </nav>
             </div>
         </header>
-        <section class="regular-banner">
+        <section class="regular-banner banner_animation">
             <div class="regular-banner-wrapper">
                 <img src="images/purchase-sale-banner.jpg" class="regular-banner-img" />
             </div>
         </section>
-        <div class="regular-head margin-top-minus">
+        <div class="regular-head margin-top-minus io fade upS banner_after_section">
             <div class="regular-head-wrapper">
                 <h2>ご購入・ご売却について</h2>
             </div>
@@ -47,21 +47,22 @@
             <div class="custom_container">
                 <div class=" custom_row">
                     <div class="custom_col_6 columnn">
-                        <div class="col-inner">
+                        <div class="col-inner io fade upS">
                             <a href="#PurchaseRealEstate" class="bttn bttn-yellow">投資用不動産　<span>ご購入</span></a>
                         </div>
                     </div>
                     <div class="custom_col_6 columnn">
-                        <div class="col-inner">
+                        <div class="col-inner io fade upS">
                             <a href="#SaleRealEstate" class="bttn bttn-blue">投資用不動産　<span>ご売却</span></a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <div class="pos_calc" id="PurchaseRealEstate"></div>
         <section class="purchase-sale-realstate">
             <div class="custom_container">
-                <div id="PurchaseRealEstate" class="realstate-layer">
+                <div class="realstate-layer io fade upS">
                     <div class="yellow_title_bg">
                         <div class="blue_inner_border">
                             <div class="heading_with_bg">
@@ -183,7 +184,8 @@
                         </div>
                     </div>
                 </div>
-                <div id="SaleRealEstate" class="realstate-layer">
+                <div class="pos_calc" id="SaleRealEstate"></div>
+                <div class="realstate-layer io fade upS">
                     <div class="blue_title_bg">
                         <div class="yellow_inner_border">
                             <div class="heading_with_bg">
@@ -310,13 +312,13 @@
         <section class="howto-contact-section">
             <div class="custom_container">
                 <div class="howto-contact-sub">
-                    <div class="underline_heading">
+                    <div class="underline_heading io fade upS">
                         <h2><span>ご相談や詳しい内容につきましてはこ</span> <br class="csp" /> <span>ちらからお問い合わせください！</span></h2>
                     </div>
                     <div class="howto-contact-content">
                         <div class="custom_row">
                             <div class="custom_col_6 columnn">
-                                <div class="content-bx">
+                                <div class="content-bx io fade upS">
                                     <div class="head">
                                         <div class="icon">
                                             <img src="images/icon-call-blue.png" />
@@ -331,7 +333,7 @@
                                 </div>
                             </div>
                             <div class="custom_col_6 columnn">
-                                <div class="content-bx">
+                                <div class="content-bx io fade upS">
                                     <div class="head">
                                         <div class="icon">
                                             <img src="images/icon-mail-blue.png" />
