--- a/work.html
+++ b/work.html
@@ -33,19 +33,19 @@
                 </nav>
             </div>
         </header>
-        <section class="regular-banner">
+        <section class="regular-banner banner_animation">
             <div class="regular-banner-wrapper">
                 <img src="images/work-page-banner.jpg" class="regular-banner-img" />
             </div>
         </section>
-        <div class="regular-head margin-top-minus">
-            <div class="regular-head-wrapper">
+        <div class="regular-head margin-top-minus banner_after_section">
+            <div class="regular-head-wrapper io fade upS">
                 <h2>実績一覧</h2>
             </div>
         </div>
         <section class="achievment-section">
             <div class="custom_container">
-                <div class="achievment-layer">
+                <div class="achievment-layer io fade upS">
                     <div class="layer-head">
                         <h3>プレサンス丸の内城雅</h3>
                     </div>
@@ -79,7 +79,7 @@
                         。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
                     </div>
                 </div>
-                <div class="achievment-layer">
+                <div class="achievment-layer io fade upS">
                     <div class="layer-head">
                         <h3>プレサンス丸の内城雅</h3>
                     </div>
@@ -113,7 +113,7 @@
                         。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
                     </div>
                 </div>
-                <div class="achievment-layer">
+                <div class="achievment-layer io fade upS">
                     <div class="layer-head">
                         <h3>プレサンス丸の内城雅</h3>
                     </div>
@@ -147,7 +147,7 @@
                         。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
                     </div>
                 </div>
-                <div class="achievment-layer">
+                <div class="achievment-layer io fade upS">
                     <div class="layer-head">
                         <h3>プレサンス丸の内城雅</h3>
                     </div>
@@ -181,7 +181,7 @@
                         。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
                     </div>
                 </div>
-                <div class="achievment-layer">
+                <div class="achievment-layer io fade upS">
                     <div class="layer-head">
                         <h3>プレサンス丸の内城雅</h3>
                     </div>
@@ -230,13 +230,13 @@
         <section class="howto-contact-section">
             <div class="custom_container">
                 <div class="howto-contact-sub">
-                    <div class="underline_heading">
+                    <div class="underline_heading io fade upS">
                         <h2><span>ご相談や詳しい内容につきましてはこ</span> <br class="csp" /> <span>ちらからお問い合わせください！</span></h2>
                     </div>
                     <div class="howto-contact-content">
                         <div class="custom_row">
                             <div class="custom_col_6 columnn">
-                                <div class="content-bx">
+                                <div class="content-bx io fade upS">
                                     <div class="head">
                                         <div class="icon">
                                             <img src="images/icon-call-blue.png" />
@@ -251,7 +251,7 @@
                                 </div>
                             </div>
                             <div class="custom_col_6 columnn">
-                                <div class="content-bx">
+                                <div class="content-bx io fade upS">
                                     <div class="head">
                                         <div class="icon">
                                             <img src="images/icon-mail-blue.png" />
