--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
 				<h3>Business</h3>
 				<p>事業案内</p>
 			</div>
-			<div class="busniess_box busniess_real_estate_box">
+			<div class="busniess_box busniess_real_estate_box io fade lr">
 				<div class="custom_container right_align">
 					<div class="busniess_box_content">
 						<div class="custom_row">
-							<div class="custom_col_image io fade lr">
+							<div class="custom_col_image">
 								<div class="busniess_image_box">
 									<img src="images/busniess_image_1.png" class="busniess_image_inner" alt="busniess image">
 									<img src="images/busniess_image_3.png" class="busniess_image_inner_second" alt="busniess image">
@@ -118,11 +118,11 @@
 					</div>
 				</div>
 			</div>
-			<div class="busniess_box busniess_management_box io fade upS">
+			<div class="busniess_box busniess_management_box io fade rl">
 				<div class="custom_container left_align">
 					<div class="busniess_box_content">
 						<div class="custom_row custom_row_reverse">
-							<div class="custom_col_image io fade rl">
+							<div class="custom_col_image">
 								<div class="busniess_image_box">
 									<img src="images/busniess_image_2.png" class="busniess_image_inner" alt="busniess image">
 									<img src="images/busniess_image_4.png" class="busniess_image_inner_second" alt="busniess image">
