--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
             </div>
         </section>
         <div class="regular-head margin-top-minus banner_after_section">
-            <div class="regular-head-wrapper io fade upS">
+            <div class="regular-head-wrapper">
                 <h2>お問い合わせ</h2>
             </div>
         </div>
