--- a/top1.html
+++ b/top1.html
@@ -32,7 +32,7 @@
 				</nav>
 			</div>
 		</header>
-		<section class="banner_section before_load banner_animation">
+		<section class="banner_section pattern1 before_load banner_animation">
 			<div class="custom_container">
 				<div class="banner_content">
 					<h1>RELIABLE ESTATE AGENT</h1>
@@ -40,112 +40,38 @@
 				</div>
 			</div>
 		</section>
-		<section class="news_section banner_after_section">
+		<section class="news_section pattern1 banner_after_section">
 			<div class="line_heading io fade upS">
 				<h3>News</h3>
 				<p>新着情報</p>
 			</div>
 			<div class="news_content">
 				<div class="news_content_inner">
-					<div class="news_content_text io fade upS">
-						<div class="news_table">
-							<div class="news_table_row">
-								<div class="news_table_th">
-									<p>2021/07/26</p>
-								</div>
-								<div class="news_table_td">
-									<p>夏季休業のお知らせ</p>
-								</div>
-							</div>
-							<div class="news_table_row">
-								<div class="news_table_th">
-									<p>2021/04/26</p>
-								</div>
-								<div class="news_table_td">
-									<p>GW休業のお知らせ</p>
-								</div>
-							</div>
-							<div class="news_table_row">
-								<div class="news_table_th">
-									<p>2020/12/06</p>
-								</div>
-								<div class="news_table_td">
-									<p>年末年始休業のお知らせ</p>
-								</div>
-							</div>
-							<div class="news_table_row">
-								<div class="news_table_th">
-									<p>2020/10/16</p>
-								</div>
-								<div class="news_table_td">
-									<p>全従業員PCR検査を実施しました</p>
-								</div>
-							</div>
-						</div>
-						<a href="#"><span>▶</span>新着情報</a>
+					<div class="news_item">
+						<div class="news_mark">▶</div><div class="news_date">2021/07/26</div><div class="news_title">夏季休業のお知らせ</div>
 					</div>
+					<div class="news_item">
+						<div class="news_mark">▶</div><div class="news_date">2021/07/26</div><div class="news_title">夏季休業のお知らせ</div>
+					</div>
+					<div class="news_item">
+						<div class="news_mark">▶</div><div class="news_date">2021/07/26</div><div class="news_title">夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ</div>
+					</div>
+				</div>
+				<div class="btn_news">
+					<a href="#"><span>▶</span>新着情報</a>
 				</div>
 			</div>
 		</section>
-		<section class="busniess_section">
+		<section class="busniess_section pattern1">
 			<div class="line_heading io fade upS">
 				<h3>Business</h3>
 				<p>事業案内</p>
 			</div>
-			<div class="busniess_box busniess_real_estate_box io fade lr">
-				<div class="custom_container right_align">
-					<div class="busniess_box_content">
-						<div class="custom_row">
-							<div class="custom_col_image">
-								<div class="busniess_image_box">
-									<img src="images/busniess_image_1.png" class="busniess_image_inner" alt="busniess image">
-									<img src="images/busniess_image_3.png" class="busniess_image_inner_second" alt="busniess image">
-								</div>
-							</div>
-							<div class="custom_col_text">
-								<div class="busniess_image_text">
-									<h3>信頼の不動産取引</h3>
-									<p>投資用マンションを専門に売買仲介を行っております。<br>
-										確かな取引実績と豊富な経験を元に、取引を安全かつ<br>
-										迅速に行いトラブルのない取引を実現しています。<br>
-										物件売却をご検討の方、「高値売却」「早期売却」は<br>
-										当社にお任せください。<br>
-									仲介営業のエキスパートが全力で販売活動を行います。</p>
-									<a href="#"><span>▶</span>詳しくはこちら</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="busniess_box busniess_management_box io fade rl">
-				<div class="custom_container left_align">
-					<div class="busniess_box_content">
-						<div class="custom_row custom_row_reverse">
-							<div class="custom_col_image">
-								<div class="busniess_image_box">
-									<img src="images/busniess_image_2.png" class="busniess_image_inner" alt="busniess image">
-									<img src="images/busniess_image_4.png" class="busniess_image_inner_second" alt="busniess image">
-								</div>
-							</div>
-							<div class="custom_col_text">
-								<div class="busniess_image_text">
-									<h3>安心の賃貸管理</h3>
-									<p>大阪、兵庫、京都の投資用マンションの賃貸管理事業を<br>
-										展開しております。ご所有物件の空室・リフォーム・滞納<br>
-										または収支改善など賃貸管理でお困りの方は、当社へ<br>
-										ご相談ください。不動産投資の成功・失敗を左右するのは<br>
-										「管理会社の選択」です。当社が成功できる賃貸経営を<br>
-									実現いたします。賃貸管理のお悩みはすべて当社が解決します。</p>
-									<a href="#"><span>▶</span>詳しくはこちら</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+			<div class="business_container">
+				
+			</div>		
 		</section>
-		<section class="trading_section">
+		<section class="trading_section pattern1">
 			<div class="line_heading io fade upS">
 				<h3>Trading Results</h3>
 				<p>最新売買の実績</p>
@@ -199,7 +125,18 @@
 				</div>
 			</div>
 		</section>
-		<section class="contact_section">
+		<section class="recruit_section">
+			<div class="recruit_container">
+				<div class="line_heading io fade upS">
+					<h3>Recruit</h3>
+					<p>採用情報</p>
+				</div>
+				<div class="recruit_btn">
+					<a class="" href="#"><span>▶</span> 応募ページ</a>
+				</div>
+			</div>
+		</section>
+		<section class="contact_section pattern1">
 			<div class="custom_container">
 				<div class="line_heading io fade upS">
 					<h3>Contact</h3>
@@ -287,5 +224,18 @@
     <script src="js/responsiveTabs.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/custom.js"></script>
+	<script type="text/javascript">
+		$(window).on('load resize scroll', function(){
+			var screen = jQuery(window).width();
+			var	windowHeight = $(window).height();
+			var	navHeight = $("header.site_header").innerHeight();
+			var	windowTop = $(window).scrollTop();
+			if(windowTop > 0) {
+				$("header.site_header").addClass("header_fixed");
+			} else {
+				$("header.site_header").removeClass("header_fixed");
+			}
+		});
+	</script>
 </body>
 </html>
